Move detailed documentation to wiki (#17)